compiler/src/test/resources/amyc/nameAnalyzer/passing/NotDuplicateLocals1.amy
object Locals
  fn foo(): Int = {
    if (true) {
      val i: Int = 42;
      i
    } else {
      val i: Int = 42;
      i
    }
  }
end Locals
