compiler/src/test/resources/amyc/nameAnalyzer/failing/UndefinedModule.amy
module Foo
  fn foo(): Bar.Baz = { 42 }
end Foo
